# rug

./: .gitignore  Cargo.toml  main.md  readme.md
examples/api/: Cargo.toml
examples/api/src/: main.rs
examples/png/: Cargo.toml
examples/png/src/: main.rs
examples/raw/: Cargo.toml
examples/raw/src/: main.rs
examples/vg-inputs/: Cargo.toml  convert.py
examples/vg-inputs/res/: SOURCES.txt  source.txt
examples/vg-inputs/src/: lib.rs  tiger.rs
rug/: Cargo.toml
rug/src/: cmd.rs  color.rs  cubic2quad.txt  geometry.rs  image.rs  lib.rs  path.rs  rasterizer.rs  renderer.rs  stroke.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs  win32.rs
spall-rs/src/: lib.rs
src/: alloc.rs  basic.rs  float.rs  geometry.rs  image.rs  lib.rs  path.rs  pipeline.rs  rasterizer.rs  renderer.rs  simd.rs  stroke.rs  wide.rs
sti/src/: simd.rs
