[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
sti = { path = "../sti" }
rug = { path = "../" }
libm = "0.2.2"
roxmltree = "0.14"
svgtypes = "0.8"
image = "0.24.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[profile.release]
debug = true
